--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+main {
+    background-color: lightblue;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 p {
     color: brown;
 }
